--- a/FootballTrackerAPI/appsettings.json
+++ b/FootballTrackerAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "FootballConnection": "Data Source=football.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
